# acc-project

./: .gitmodules  README.md  _saved_chain-item.sch  chain-item-cache.lib  chain-item.bak  chain-item.kicad_pcb  chain-item.kicad_pcb-bak  chain-item.sch  fp-lib-table  pad_resistor.kicad_mod  pogopin.kicad_mod
gerber/: chain-item-B.Mask.gbs  chain-item-Edge.Cuts.gm1  chain-item-F.Cu.gtl  chain-item.drl
hardware/: chain-item.kicad_pcb  chain-item.xml  chain-item_grouped.csv
hardware/gerber/: chain-item-B.Cu.gbl  chain-item-B.SilkS.gbo  chain-item-F.Mask.gts  chain-item-F.SilkS.gto
software/chain-item/: README.md  attiny10_cross.txt  main.c  main.h  main2.c  meson.build  mydefs.h  suart.c  suart.h
software/main-board/: Makefile  README.md  sdkconfig
software/main-board/components/ws2812/: component.mk  ws2812.cpp
software/main-board/main/: acc_controller_main.c
software/robot/: CMakeLists.txt  Makefile  README.md  env.sh  sdkconfig  ws.html
software/robot/main/: CMakeLists.txt  Kconfig.projbuild  main.c  robot.cpp  robot.h  robot_main.c  robot_main.cpp  socket_server.c  utils.c  wifi.c
software/robot/tests/: bluetooth_controller.py  pygame_test.py
software/robot_controller/: README.md  pubspec.yaml
software/robot_controller/assets/: test.blend
software/robot_controller/lib/: application.dart  main.dart  main.dart.bak  main.dart.bak2
software/robot_controller/linux/: app_configuration.mk  window_configuration.cc
software/robot_controller/test/: widget_test.dart
software/robot_controller/web/: index.html  manifest.json
(+24 files in other folders)
